<resources>
    <string name="uag_login" translatable="false">com.amarullz.apps.googledocs</string>
    <string name="uag_apps" translatable="false">Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36 Edg/114.0.1823.61</string>

    <string name="task_codeserver" translatable="false">com.amarullz.app.codeserver</string>
    <string name="task_codeserver_remote" translatable="false">com.amarullz.app.codeserver.remote</string>
    <string name="task_docs" translatable="false">com.amarullz.app.googledocs.docs</string>
    <string name="task_sheets" translatable="false">com.amarullz.app.googledocs.sheets</string>
    <string name="task_slides" translatable="false">com.amarullz.app.googledocs.slides</string>

    <string name="app_name">Google Docs Desk</string>
    <string name="app_codeserver">Code Server Local</string>
    <string name="app_codeserver_remote">Code Server Remote</string>
    <string name="app_docs">Docs Desk</string>
    <string name="app_sheets">Sheets Desk</string>
    <string name="app_slides">Slides Desk</string>
    <string name="fab_zoom_in">Zoom In</string>
    <string name="fab_zoom_out">Zoom Out</string>
    <string name="fab_mouse">Mouse Emulation</string>
    <string name="fab_touch">Touch Mode</string>
    <string name="fab_fullscreen">Fullscreen</string>
    <string name="fab_fullscreen_exit">Exit Fullscreen</string>
    <string name="fab_home">Home</string>
    <string name="fab_back">Back</string>
    <string name="fab_close">Close</string>
    <string name="fab_settings">Settings</string>
    <string name="fab_show_keyboard">Show Keyboard</string>
    <string name="fab_hide_keyboard">Hide Keyboard</string>
    <string name="zoom_toast">Zoom %</string>
</resources>